tests/paczka1/fuzzy1/96513281.err
Error in line 12: Lvc S608 57,3
Error in line 17: cWfGeOU6VR6 S540 44,6
Error in line 14: Lvc A242 88,9
Error in line 32: 9n1AnZQxlI7 S540 112,0
